test: maximize indicator coverage and add ci checks

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,13 @@
 # SPDX-License-Identifier: MIT
 [pytest]
 addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
-testpaths = domains
 python_files = test_*.py
+testpaths =
+    tests
+    analytics
+    markets
+    core
+asyncio_default_fixture_loop_scope = function
 filterwarnings =
     ignore::UserWarning
+    ignore:.*asyncio_default_fixture_loop_scope.*:pytest.PytestDeprecationWarning
