Add comprehensive test suite

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 # SPDX-License-Identifier: MIT
 [pytest]
 addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
-testpaths = domains
+testpaths = tests
 python_files = test_*.py
 filterwarnings =
     ignore::UserWarning
