--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,27 @@
 [run]
-source = core,backtest,execution
-omit = */__init__.py
+source =
+    core
+    backtest
+    execution
+omit =
+    */__init__.py
+    analytics/*
+    markets/*
+    nfpro/*
+    tests/*
+    apps/*
+    interfaces/*
+    libs/*
 
 [report]
 show_missing = True
 precision = 2
+omit =
+    */__init__.py
+    analytics/*
+    markets/*
+    nfpro/*
+    tests/*
+    apps/*
+    interfaces/*
+    libs/*
