--- a/pytest.ini
+++ b/pytest.ini
@@ -3,5 +3,6 @@
 addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
 testpaths = tests
 python_files = test_*.py
+asyncio_default_fixture_loop_scope = function
 filterwarnings =
     ignore::UserWarning
