--- a/configs/kuramoto_ricci_composite.yaml
+++ b/configs/kuramoto_ricci_composite.yaml
@@ -1,199 +1,136 @@
-# TradePulse: Kuramoto-Ricci Composite Configuration
-# Location: configs/kuramoto_ricci_composite.yaml
-
-# Multi-Scale Kuramoto Configuration
 kuramoto:
-  # Timeframes for multi-scale analysis (in seconds)
   timeframes:
-    - 60      # 1 minute
-    - 300     # 5 minutes
-    - 900     # 15 minutes
-    - 3600    # 1 hour
-  
-  # Adaptive window settings
+    - 60
+    - 300
+    - 900
+    - 3600
   adaptive_window:
     enabled: true
     min_window: 50
     max_window: 500
-    base_window: 200  # Used when adaptive is disabled
-  
-  # Consensus weights (must sum to 1.0)
+    base_window: 200
   consensus_weights:
-    M1: 0.1    # 1 minute
-    M5: 0.2    # 5 minutes
-    M15: 0.3   # 15 minutes
-    H1: 0.4    # 1 hour
-  
-  # Phase extraction
+    M1: 0.1
+    M5: 0.2
+    M15: 0.3
+    H1: 0.4
   hilbert:
     detrend: true
-    method: "linear"  # linear, constant, or none
+    method: "linear"
 
-
-# Temporal Ricci Configuration
 ricci:
-  # Graph construction
   graph:
-    n_levels: 20              # Number of price levels for graph nodes
-    connection_threshold: 0.1  # Minimum weight for edge creation
-  
-  # Temporal analysis
+    n_levels: 20
+    connection_threshold: 0.1
   temporal:
-    window_size: 100           # Window for each snapshot
-    n_snapshots: 10            # Number of snapshots to track
-    snapshot_interval: null    # Auto-calculated if null
-  
-  # Ollivier-Ricci parameters
+    window_size: 100
+    n_snapshots: 10
+    snapshot_interval: null
   ollivier:
-    alpha: 0.5                 # Lazy random walk parameter [0, 1]
-    timeout: 1                 # Graph edit distance timeout (seconds)
-  
-  # Topological transition detection
+    alpha: 0.5
+    timeout: 1
   transition:
-    derivative_window: 2       # Window for computing metric changes
-    jump_threshold: 0.3        # Threshold for transition detection
-    sigmoid_steepness: 10      # Steepness of sigmoid function
+    derivative_window: 2
+    jump_threshold: 0.3
+    sigmoid_steepness: 10
 
-
-# Composite Indicator Configuration
 composite:
-  # Phase determination thresholds
   thresholds:
-    # Kuramoto thresholds
-    R_strong_emergent: 0.80     # Strong emergent phase threshold
-    R_proto_emergent: 0.40      # Proto emergent phase threshold
-    coherence_min: 0.60         # Minimum cross-scale coherence
-    
-    # Ricci thresholds
-    ricci_negative: -0.30       # Negative curvature threshold
-    temporal_ricci: -0.20       # Temporal curvature threshold
-    
-    # Transition threshold
-    topological_transition: 0.70  # High transition probability
-  
-  # Signal generation
+    R_strong_emergent: 0.80
+    R_proto_emergent: 0.40
+    coherence_min: 0.60
+    ricci_negative: -0.30
+    temporal_ricci: -0.20
+    topological_transition: 0.70
   signals:
-    min_confidence: 0.50        # Minimum confidence for entry signals
+    min_confidence: 0.50
     confidence_boost:
-      strong_emergent: 1.5      # Multiplier for strong emergent
-      chaotic: 0.5              # Multiplier for chaotic
-    
-    # Risk multipliers
+      strong_emergent: 1.5
+      chaotic: 0.5
     risk_multipliers:
       strong_emergent:
         base: 1.0
-        confidence_scale: 0.5   # Additional scaling by confidence
+        confidence_scale: 0.5
       proto_emergent:
         base: 0.7
         confidence_scale: 0.3
       transition: 0.3
       chaotic: 0.3
       post_emergent: 0.2
-      
-      # Global limits
       min: 0.1
       max: 2.0
-  
-  # Phase-specific behavior
   phases:
     strong_emergent:
-      entry_direction: "temporal_ricci"  # Use temporal_ricci for direction
+      entry_direction: "temporal_ricci"
       exit_urgency: 0.1
-      
     proto_emergent:
       entry_scale: 0.5
       exit_urgency: 0.3
-      
     post_emergent:
-      entry_signal: -0.3         # Mild short bias
+      entry_signal: -0.3
       exit_urgency: 0.7
-      
     transition:
-      entry_signal: 0.0          # No entry during transition
-      exit_urgency: "transition_score"  # Use transition score
-      
+      entry_signal: 0.0
+      exit_urgency: "transition_score"
     chaotic:
-      entry_signal: 0.0          # Stay out
+      entry_signal: 0.0
       exit_urgency: 0.5
 
-
-# Integration Settings
 integration:
-  # Data requirements
   data:
-    min_history: 1000           # Minimum data points required
+    min_history: 1000
     required_columns:
       - close
       - volume
     datetime_index: true
-  
-  # Performance
   performance:
-    parallel_timeframes: true   # Compute timeframes in parallel
-    cache_graphs: true          # Cache graph snapshots
+    parallel_timeframes: true
+    cache_graphs: true
     max_cache_size: 100
-  
-  # Logging
   logging:
-    level: "INFO"              # DEBUG, INFO, WARNING, ERROR
+    level: "INFO"
     log_signals: true
     log_metrics: true
     save_history: true
     history_path: "outputs/signal_history.csv"
 
-
-# Backtesting Integration
 backtest:
-  # Signal-to-trade conversion
   trade_execution:
-    entry_signal_threshold: 0.3   # Minimum entry signal to trade
-    exit_signal_threshold: 0.6    # Minimum exit signal to close
-    
-  # Position sizing
+    entry_signal_threshold: 0.3
+    exit_signal_threshold: 0.6
   position_sizing:
-    base_size: 1.0                # Base position size
-    use_risk_multiplier: true     # Use composite risk multiplier
-    max_position: 2.0             # Maximum position size
-    
-  # Risk management
+    base_size: 1.0
+    use_risk_multiplier: true
+    max_position: 2.0
   risk:
-    use_confidence_filter: true   # Filter trades by confidence
+    use_confidence_filter: true
     min_confidence: 0.5
-    stop_loss_multiplier: 1.5     # SL based on risk_multiplier
+    stop_loss_multiplier: 1.5
     take_profit_multiplier: 2.0
 
-
-# Monitoring & Alerts
 monitoring:
   alerts:
-    # Phase change alerts
     phase_change:
       enabled: true
       notify_on:
         - STRONG_EMERGENT
         - TRANSITION
-    
-    # Metric alerts
     metric_thresholds:
       high_transition:
         metric: "topological_transition_score"
         threshold: 0.8
         action: "log"
-      
       low_coherence:
         metric: "cross_scale_coherence"
         threshold: 0.3
         action: "log"
-      
       extreme_risk:
         metric: "risk_multiplier"
         min: 0.1
         max: 1.8
         action: "alert"
-  
-  # Dashboard updates
   dashboard:
-    update_interval: 60         # Seconds
+    update_interval: 60
     metrics_to_display:
       - kuramoto_R
       - consensus_R
@@ -204,56 +141,40 @@ monitoring:
       - entry_signal
       - exit_signal
 
-
-# Feature Engineering (for ML integration)
 features:
-  # Derived features from composite
   engineering:
     kuramoto_features:
       - consensus_R
       - cross_scale_coherence
       - dominant_timeframe_R
-      
     ricci_features:
       - static_ricci
       - temporal_ricci
       - topological_transition_score
       - structural_stability
       - edge_persistence
-      
     composite_features:
-      - phase_encoded          # One-hot encoding of phase
+      - phase_encoded
       - confidence
       - entry_signal
       - exit_signal
       - risk_multiplier
-  
-  # Feature normalization
   normalization:
-    method: "robust"           # standard, minmax, robust
+    method: "robust"
     rolling_window: 500
 
-
-# Experimental Settings
 experimental:
-  # Advanced Kuramoto
   kuramoto_extensions:
-    higher_order_coupling: false     # Triplet interactions
-    adaptive_coupling_strength: false # Dynamic coupling
-    
-  # Advanced Ricci
+    higher_order_coupling: false
+    adaptive_coupling_strength: false
   ricci_extensions:
-    persistent_homology: false       # TDA integration
-    ricci_flow: false                # Graph evolution via flow
-    
-  # Meta-learning
+    persistent_homology: false
+    ricci_flow: false
   meta_learning:
     enabled: false
-    update_thresholds: false         # Adaptive threshold learning
-    strategy_evolution: false        # Genetic programming
+    update_thresholds: false
+    strategy_evolution: false
 
-
-# Version & Metadata
 metadata:
   version: "1.0.0"
   author: "TradePulse Development"
