--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-ccxt==4.3.89
-prometheus_client==0.20.0
-numpy==1.26.4
-pandas==2.2.2
-pyyaml==6.0.2
+numpy>=1.23
+scipy>=1.11
+pandas>=1.5
+networkx>=3.1
+pytest>=7.4
+ruff>=0.5.0
+mypy>=1.8.0
