--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: MIT
 [pytest]
 addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
-testpaths = domains
+testpaths = tests
 python_files = test_*.py
+asyncio_default_fixture_loop_scope = function
 filterwarnings =
     ignore::UserWarning
