--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -26,7 +26,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade "pip<25.2"
         pip install bandit safety
     
     - name: Run custom secret scanner
@@ -64,7 +64,7 @@ jobs:
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install --upgrade "pip<25.2"
         pip install safety pip-audit
     
     - name: Check for known vulnerabilities with Safety
