--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
       - Extending TradePulse: extending.md
       - Integration API: integration-api.md
       - Developer Scenarios: scenarios.md
+      - Technical Debt Playbook: technical-debt.md
       - Testing Guide: ../TESTING.md
       - Contributing: ../CONTRIBUTING.md
   - Operations:
@@ -83,8 +84,8 @@ markdown_extensions:
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - tables
   - toc:
       permalink: true
