--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,3 +8,7 @@ bandit==1.8.0
 hypothesis==6.140.3
 PyYAML==6.0.3
 protobuf==5.29.5
+opentelemetry-api==1.26.0
+opentelemetry-sdk==1.26.0
+opentelemetry-exporter-otlp==1.26.0
+opentelemetry-exporter-jaeger==1.26.0
