--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ pytest>=8.0.0
 ruff>=0.5.0
 mypy>=1.8.0
 prometheus-client>=0.19.0
+opentelemetry-api>=1.26.0
+opentelemetry-sdk>=1.26.0
+opentelemetry-exporter-otlp>=1.26.0
+opentelemetry-exporter-jaeger>=1.26.0
 # Security: Pin secure versions of common transitive dependencies
 certifi>=2024.7.4
 idna>=3.7
