--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,7 @@ nav:
       - Contributing: ../CONTRIBUTING.md
   - Operations:
       - Monitoring: monitoring.md
+      - Scaling: scaling.md
       - Security: ../SECURITY.md
       - Deployment: deployment.md
   - Reference:
