--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,6 +12,7 @@ pytest==8.4.2
 pytest-cov==6.0.0
 pytest-asyncio==0.25.2
 hypothesis==6.140.3
+pytest-html==4.1.1
 
 # Security scanning
 bandit==1.8.0
