--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ scipy>=1.11.0
 pandas>=2.0.0
 networkx>=3.2.0
 
+# Data validation
+pydantic>=1.10.15,<2.0.0
+
 # Configuration & instrumentation
 PyYAML>=6.0.2
 prometheus-client>=0.19.0
