--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ pandas>=2.0.0
 networkx>=3.2.0
 
 # Data validation
-pydantic>=1.10.15,<2.0.0
+pydantic>=2.12.0,<3.0.0
+pydantic-settings>=2.11.0,<3.0.0
 
 # Configuration & instrumentation
 PyYAML>=6.0.2
