--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ pydantic-settings>=2.11.0,<3.0.0
 
 # Configuration & instrumentation
 PyYAML>=6.0.2
+hydra-core>=1.3.0
+omegaconf>=2.3.0
 prometheus-client>=0.19.0
 
 # Templates & packaging helpers
