--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
+      - name: Run mypy strict
+        run: |
+          mypy --config-file mypy.ini .
       - name: Prepare test report directories
         run: |
           mkdir -p reports
