--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,15 @@ pydantic-settings>=2.11.0,<3.0.0
 
 # Configuration & instrumentation
 PyYAML>=6.0.2
+hydra-core>=1.3.0
+omegaconf>=2.3.0
 prometheus-client>=0.19.0
+httpx>=0.27.0
+websockets>=12.0
+ccxt>=4.3.0
+tenacity>=8.2.3
+aiolimiter>=1.1.0
+pyarrow>=17.0.0
 
 # Templates & packaging helpers
 jinja2>=3.1.6
