--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -67,3 +67,34 @@ jobs:
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: false
+
+  pytest-xdist:
+    name: Pytest (xdist profiling)
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+      - name: Run pytest in parallel with profiling
+        run: |
+          pytest tests/ -n auto --durations=20 --profile
+      - name: Collect profiling artifacts
+        if: always()
+        run: |
+          mkdir -p reports/profiling
+          if [ -d prof ]; then cp -r prof/. reports/profiling/; fi
+      - name: Upload profiling artifacts
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-profiling
+          path: reports/profiling
+          if-no-files-found: warn
