Add exchange calendars and DST-safe bar alignment checks

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ networkx>=3.2.0
 pydantic>=2.12.0,<3.0.0
 pydantic-settings>=2.11.0,<3.0.0
 pandera>=0.20.3,<0.21
+exchange-calendars>=4.11.1
 
 # Configuration & instrumentation
 PyYAML>=6.0.2
