--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -16,6 +16,10 @@ pytest-html==4.1.1
 pytest-xdist==3.6.1
 pytest-profiling==1.7.0
 
+# Profiling tools
+scalene>=1.5.45
+py-spy>=0.3.14
+
 # Security scanning
 bandit==1.8.0
 
