--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ PyYAML>=6.0.2
 hydra-core>=1.3.0
 omegaconf>=2.3.0
 prometheus-client>=0.19.0
+opentelemetry-api>=1.26.0
+opentelemetry-sdk>=1.26.0
+opentelemetry-exporter-otlp>=1.26.0
 httpx>=0.27.0
 websockets>=12.0
 ccxt>=4.3.0
