--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "security:audit-scripts": "node scripts/audit-external-scripts.cjs"
   },
   "dependencies": {
     "next": "14.2.5",
