--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,17 +9,22 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.11', '3.12', '3.13']
+    name: Tests (Python ${{ matrix.python-version }})
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
+          allow-prereleases: ${{ matrix.python-version == '3.13' }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install -r requirements.lock
+          pip install -r requirements-dev.lock
       - name: Prepare test report directories
         run: |
           mkdir -p reports
@@ -39,7 +44,7 @@ jobs:
       - name: Upload JUnit test reports
         uses: actions/upload-artifact@v4
         with:
-          name: junit-test-results
+          name: junit-test-results-${{ matrix.python-version }}
           path: |
             reports/unit-integration-tests.xml
             reports/property-tests.xml
@@ -47,7 +52,7 @@ jobs:
       - name: Upload HTML test reports
         uses: actions/upload-artifact@v4
         with:
-          name: pytest-html-reports
+          name: pytest-html-reports-${{ matrix.python-version }}
           path: |
             reports/unit-integration-report.html
             reports/property-tests-report.html
@@ -55,7 +60,7 @@ jobs:
       - name: Upload coverage reports
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-reports
+          name: coverage-reports-${{ matrix.python-version }}
           path: |
             coverage.xml
             coverage_html
@@ -64,8 +69,8 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           files: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
+          flags: py${{ matrix.python-version }}
+          name: py${{ matrix.python-version }}-coverage
           fail_ci_if_error: false
 
   pytest-xdist:
@@ -81,8 +86,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install -r requirements-dev.txt
+          pip install -r requirements.lock
+          pip install -r requirements-dev.lock
       - name: Run pytest in parallel with profiling
         run: |
           pytest tests/ -n auto --durations=20 --profile
