--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,11 +17,16 @@ pytest-xdist==3.6.1
 pytest-profiling==1.7.0
 
 # Profiling tools
-scalene>=1.5.45
-py-spy>=0.3.14
+scalene>=1.5.55
+py-spy>=0.4.1
 
 # Security scanning
 bandit==1.8.0
 
 # Protocol buffers tooling
 protobuf==5.29.5
+
+# Packaging & release tooling
+build==1.3.0
+twine==5.1.1
+pip-tools==7.5.1
