--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ dev = [
     "pytest-asyncio>=0.25.2",
     "pytest-html>=4.1.1",
     "pytest-xdist>=3.6.1",
-    "pytest-profiling>=1.7.0",
+    "pytest-profiling>=1.7.0; python_version < \"3.13\"",
     "hypothesis>=6.140.3",
     "scalene>=1.5.55",
     "py-spy>=0.4.1",
