--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -14,7 +14,7 @@ pytest-asyncio==0.25.2
 hypothesis==6.140.3
 pytest-html==4.1.1
 pytest-xdist==3.6.1
-pytest-profiling==1.7.0
+pytest-profiling==1.7.0; python_version < "3.13"
 
 # Profiling tools
 scalene>=1.5.55
