--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -48,6 +48,11 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Enable QEMU for cross-architecture builds
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: all
+
       - name: Generate release notes and changelog
         id: changelog
         run: |
@@ -81,14 +86,31 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install build tooling
+      - name: Install packaging toolchain
         run: |
           python -m pip install --upgrade pip
-          pip install build==1.3.0 twine==5.1.1
+          pip install build==1.3.0 twine==5.1.1 cibuildwheel==2.21.3 auditwheel==6.0.0
 
-      - name: Build wheel and sdist
+      - name: Build source distribution
         run: |
-          python -m build --sdist --wheel --outdir dist
+          python -m build --sdist --outdir dist
+
+      - name: Build manylinux/musllinux wheels
+        env:
+          CIBW_ARCHS_LINUX: "x86_64 aarch64"
+          CIBW_ENVIRONMENT_PASS_LINUX: "UV_HTTP_TIMEOUT"
+          UV_HTTP_TIMEOUT: "60"
+        run: |
+          python -m cibuildwheel --output-dir wheelhouse
+
+      - name: Verify wheel compatibility tags
+        run: |
+          python scripts/packaging/verify_wheels.py wheelhouse
+
+      - name: Stage artifacts
+        run: |
+          mkdir -p dist
+          cp wheelhouse/*.whl dist/
 
       - name: Verify distribution metadata
         run: |
