--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,46 @@ on:
     branches: [ main ]
 
 jobs:
+  smoke:
+    name: Smoke (Python ${{ matrix.python-version }} / ${{ matrix.architecture }})
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - python-version: '3.11'
+            architecture: 'x64'
+            runs-on: ubuntu-latest
+          - python-version: '3.12'
+            architecture: 'x64'
+            runs-on: ubuntu-latest
+          - python-version: '3.13'
+            architecture: 'x64'
+            runs-on: ubuntu-latest
+          - python-version: '3.11'
+            architecture: 'arm64'
+            runs-on: ubuntu-24.04-arm
+          - python-version: '3.12'
+            architecture: 'arm64'
+            runs-on: ubuntu-24.04-arm
+          - python-version: '3.13'
+            architecture: 'arm64'
+            runs-on: ubuntu-24.04-arm
+    runs-on: ${{ matrix.runs-on }}
+    steps:
+      - uses: actions/checkout@v5
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: ${{ matrix.architecture }}
+          allow-prereleases: ${{ matrix.python-version == '3.13' }}
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+      - name: Sync dependencies
+        run: uv pip sync requirements-dev.lock
+      - name: Run smoke tests
+        run: pytest tests/smoke -k feature_store
+
   tests:
     runs-on: ubuntu-latest
     strategy:
@@ -76,7 +116,7 @@ jobs:
   pytest-xdist:
     name: Pytest (xdist profiling)
     runs-on: ubuntu-latest
-    needs: tests
+    needs: [smoke, tests]
     steps:
       - uses: actions/checkout@v5
       - name: Set up Python
