--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "ccxt>=4.5.9",
     "tenacity>=9.1.2",
     "aiolimiter>=1.2.1",
+    "redis>=5.2.0",
     "pyarrow>=21.0.0",
     "jinja2>=3.1.6",
     "setuptools>=78.1.1",
@@ -77,6 +78,7 @@ dev = [
     "build>=1.3.0",
     "twine>=5.1.1",
     "pip-tools>=7.5.1",
+    "fakeredis>=2.26.2",
 ]
 docs = [
     "mkdocs>=1.6.0",
@@ -84,6 +86,11 @@ docs = [
     "mkdocs-minify-plugin>=0.8.0",
     "pymdown-extensions>=10.8",
     "mike>=2.0.0",
+]
+feature-store = [
+    "redis>=5.2.0",
+    "deltalake>=0.19.2; python_version < \"3.13\"",
+    "pyiceberg>=0.8.0",
 ]
 gpu = [
     "numba>=0.60.0",
@@ -130,3 +137,26 @@ ignore = ["E203"]
 [tool.mypy]
 ignore_missing_imports = true
 plugins = ["numpy.typing.mypy_plugin"]
+
+[tool.cibuildwheel]
+build = [
+    "cp311-manylinux_x86_64",
+    "cp312-manylinux_x86_64",
+    "cp313-manylinux_x86_64",
+    "cp311-manylinux_aarch64",
+    "cp312-manylinux_aarch64",
+    "cp313-manylinux_aarch64",
+    "cp311-musllinux_x86_64",
+    "cp312-musllinux_x86_64",
+    "cp313-musllinux_x86_64",
+    "cp311-musllinux_aarch64",
+    "cp312-musllinux_aarch64",
+    "cp313-musllinux_aarch64",
+]
+archs = { linux = ["x86_64", "aarch64"] }
+manylinux-x86_64-image = "manylinux_2_28"
+manylinux-aarch64-image = "manylinux_2_28"
+musllinux-x86_64-image = "musllinux_1_2"
+musllinux-aarch64-image = "musllinux_1_2"
+test-command = "pytest -k smoke --maxfail=1 --disable-warnings"
+test-requires = ["pytest"]
