--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ websockets>=15.0.1
 ccxt>=4.5.9
 tenacity>=9.1.2
 aiolimiter>=1.2.1
+redis>=5.2.0
 pyarrow>=21.0.0
 
 # Templates & packaging helpers
