--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,6 +44,9 @@ jobs:
         uses: astral-sh/setup-uv@v3
       - name: Sync dependencies
         run: uv pip sync requirements-dev.lock
+      - name: Install feature store extras
+        if: matrix.python-version != '3.13'
+        run: uv pip install '.[feature-store]'
       - name: Run smoke tests
         run: pytest tests/smoke -k feature_store
 
@@ -65,6 +68,9 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.lock
           pip install -r requirements-dev.lock
+      - name: Install feature store extras
+        if: matrix.python-version != '3.13'
+        run: pip install '.[feature-store]'
       - name: Prepare test report directories
         run: |
           mkdir -p reports
