--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,8 +70,8 @@ dev = [
     "pytest-xdist>=3.6.1",
     "pytest-profiling>=1.7.0; python_version < \"3.13\"",
     "hypothesis>=6.140.3",
-    "scalene>=1.5.55",
-    "py-spy>=0.4.1",
+    "scalene>=1.5.55; python_version < \"3.13\"",
+    "py-spy>=0.4.1; python_version < \"3.13\"",
     "bandit>=1.8.0",
     "protobuf>=5.29.5",
     "build>=1.3.0",
