--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -42,6 +42,11 @@ jobs:
           allow-prereleases: ${{ matrix.python-version == '3.13' }}
       - name: Install uv
         uses: astral-sh/setup-uv@v3
+      - name: Create virtual environment
+        run: |
+          uv venv
+          echo "VIRTUAL_ENV=$PWD/.venv" >> $GITHUB_ENV
+          echo "$PWD/.venv/bin" >> $GITHUB_PATH
       - name: Sync dependencies
         run: uv pip sync requirements-dev.lock
       - name: Install feature store extras
