--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,7 +33,7 @@ jobs:
           mkdir -p reports
       - name: Run unit and integration tests with coverage
         run: |
-          uv run pytest tests/unit/ tests/integration/ tests/property/ tests/fuzz/ \
+          .venv/bin/python -m pytest tests/unit/ tests/integration/ tests/property/ tests/fuzz/ \
             --cov=core --cov=backtest --cov=execution \
             --cov-report=xml --cov-report=term-missing --cov-report=html:coverage_html \
             --cov-fail-under=90 \
@@ -41,7 +41,7 @@ jobs:
             --html=reports/unit-integration-report.html --self-contained-html
       - name: Run property-based tests with statistics
         run: |
-          uv run pytest tests/property/ --hypothesis-show-statistics \
+          .venv/bin/python -m pytest tests/property/ --hypothesis-show-statistics \
             --junitxml=reports/property-tests.xml \
             --html=reports/property-tests-report.html --self-contained-html
       - name: Upload JUnit test reports
@@ -96,7 +96,7 @@ jobs:
           uv pip install -r requirements-dev.lock
       - name: Run pytest in parallel with profiling
         run: |
-          uv run pytest tests/ -n auto --durations=20 --profile
+          .venv/bin/python -m pytest tests/ -n auto --durations=20 --profile
       - name: Collect profiling artifacts
         if: always()
         run: |
