--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -168,13 +168,13 @@ jobs:
         fail-build: true
         severity-cutoff: critical
         output-format: sarif
-        output-file: grype-results.sarif
+        output-file: grype-results
 
     - name: Upload Grype SARIF results
       if: always()
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: grype-results.sarif
+        sarif_file: anchore-reports/grype-results.sarif
 
   codeql-analysis:
     name: CodeQL Analysis
