--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,7 @@ python_files = test_*.py
 asyncio_default_fixture_loop_scope = function
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
+    arm: cross-architecture and portability checks for indicators
+    heavy_math: compute-intensive suites that gate pull requests
 filterwarnings =
     ignore::UserWarning
