Ensure alert config runs after smoke failures

--- a/.github/workflows/smoke-e2e.yml
+++ b/.github/workflows/smoke-e2e.yml
@@ -102,6 +102,7 @@ jobs:
           if-no-files-found: error
 
       - name: Evaluate alert configuration
+        if: always()
         id: alert-config
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SMOKE_SLACK_WEBHOOK_URL }}
