--- a/.github/workflows/publish-python.yml
+++ b/.github/workflows/publish-python.yml
@@ -91,13 +91,13 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install build==1.3.0 twine==5.1.1 cyclonedx-bom==4.0.0
 
-      - name: Build wheel and sdist
+      - name: Build source distribution
         run: |
-          python -m build --sdist --wheel --outdir dist
+          python -m build --sdist --outdir dist
 
-      - name: Verify distribution metadata
+      - name: Verify source distribution metadata
         run: |
-          twine check dist/*
+          twine check dist/*.tar.gz
 
       - name: Generate CycloneDX SBOM inputs
         run: |
@@ -166,6 +166,85 @@ jobs:
           print('CycloneDX validation succeeded for all artifacts.')
           PY
 
+      - name: Upload source distribution artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: tradepulse-sdist
+          path: dist/*.tar.gz
+          if-no-files-found: error
+
+      - name: Upload SBOM artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tradepulse-sbom
+          path: |
+            sbom/cyclonedx-sbom.json
+            sbom/cyclonedx-sbom.xml
+          if-no-files-found: error
+
+  build-wheels:
+    name: Build wheels (cibuildwheel)
+    runs-on: ${{ matrix.os }}
+    needs: build
+    env:
+      CIBW_PRERELEASE_PYTHONS: "1"
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    steps:
+      - uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+      - name: Set up QEMU emulation
+        if: matrix.os == 'ubuntu-latest'
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: linux/arm64
+      - name: Build wheels
+        uses: pypa/cibuildwheel@v2.19.1
+        with:
+          output-dir: wheelhouse
+      - name: Upload wheel artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: tradepulse-wheels-${{ matrix.os }}
+          path: wheelhouse/*
+          if-no-files-found: error
+
+  bundle:
+    name: Sign and bundle distributions
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - build-wheels
+    steps:
+      - name: Download wheel artifacts
+        uses: actions/download-artifact@v4
+        with:
+          pattern: tradepulse-wheels-*
+          path: wheelhouse
+          merge-multiple: true
+
+      - name: Download source distribution
+        uses: actions/download-artifact@v4
+        with:
+          name: tradepulse-sdist
+          path: dist
+
+      - name: Assemble distribution directory
+        run: |
+          mkdir -p dist
+          if [ -d wheelhouse ]; then cp -a wheelhouse/. dist/; fi
+
+      - name: Install verification tooling
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install twine==5.1.1
+
+      - name: Final distribution checks
+        run: |
+          twine check dist/*
+
       - name: Sign distributions with Sigstore
         uses: sigstore/gh-action-sigstore-python@v3.4.0
         with:
@@ -173,7 +252,7 @@ jobs:
             dist/*.tar.gz
             dist/*.whl
 
-      - name: Upload distribution artifacts
+      - name: Upload bundled distributions
         uses: actions/upload-artifact@v4
         with:
           name: tradepulse-distributions
@@ -186,25 +265,17 @@ jobs:
             dist/*.whl.crt
           if-no-files-found: error
 
-      - name: Upload SBOM artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: tradepulse-sbom
-          path: |
-            sbom/cyclonedx-sbom.json
-            sbom/cyclonedx-sbom.xml
-          if-no-files-found: error
-
   testpypi-dry-run:
     name: Dry-run publish to TestPyPI
-    needs: build
+    needs:
+      - bundle
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
       actions: read
     steps:
-      - name: Download build artifacts
+      - name: Download bundled artifacts
         uses: actions/download-artifact@v4
         with:
           name: tradepulse-distributions
@@ -221,7 +292,7 @@ jobs:
   publish:
     name: Publish to PyPI
     needs:
-      - build
+      - bundle
       - testpypi-dry-run
     runs-on: ubuntu-latest
     permissions:
@@ -229,7 +300,7 @@ jobs:
       id-token: write
       actions: read
     steps:
-      - name: Download build artifacts
+      - name: Download bundled artifacts
         uses: actions/download-artifact@v4
         with:
           name: tradepulse-distributions
