--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version", "readme"]
 description = "Advanced algorithmic trading framework with geometric market indicators"
 authors = [{ name = "TradePulse Contributors" }]
 license = { file = "LICENSE" }
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 keywords = ["trading", "quant", "algorithmic", "markets", "analytics"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -16,14 +16,18 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Office/Business :: Financial :: Investment",
 ]
 dependencies = [
-    "numpy>=2.3.3",
-    "scipy>=1.16.2",
+    "numpy>=2.3.3; python_version >= \"3.10\"",
+    "numpy>=1.26.4,<2.0; python_version < \"3.10\"",
+    "scipy>=1.16.2; python_version >= \"3.10\"",
+    "scipy>=1.10.0,<1.11; python_version < \"3.10\"",
     "pandas>=2.3.3",
     "networkx>=3.5",
     "pydantic>=2.12.0,<3.0.0",
@@ -77,6 +81,7 @@ dev = [
     "build>=1.3.0",
     "twine>=5.1.1",
     "pip-tools>=7.5.1",
+    "mutmut>=2.4.5",
 ]
 docs = [
     "mkdocs>=1.6.0",
@@ -130,3 +135,66 @@ ignore = ["E203"]
 [tool.mypy]
 ignore_missing_imports = true
 plugins = ["numpy.typing.mypy_plugin"]
+
+[tool.cibuildwheel]
+build = [
+    "cp39-manylinux_x86_64",
+    "cp39-manylinux_aarch64",
+    "cp39-musllinux_x86_64",
+    "cp39-musllinux_aarch64",
+    "cp310-manylinux_x86_64",
+    "cp310-manylinux_aarch64",
+    "cp310-musllinux_x86_64",
+    "cp310-musllinux_aarch64",
+    "cp311-manylinux_x86_64",
+    "cp311-manylinux_aarch64",
+    "cp311-musllinux_x86_64",
+    "cp311-musllinux_aarch64",
+    "cp312-manylinux_x86_64",
+    "cp312-manylinux_aarch64",
+    "cp312-musllinux_x86_64",
+    "cp312-musllinux_aarch64",
+    "cp313-manylinux_x86_64",
+    "cp313-manylinux_aarch64",
+    "cp313-musllinux_x86_64",
+    "cp313-musllinux_aarch64",
+    "cp39-win_amd64",
+    "cp310-win_amd64",
+    "cp311-win_amd64",
+    "cp312-win_amd64",
+    "cp313-win_amd64",
+    "cp39-macosx_universal2",
+    "cp310-macosx_universal2",
+    "cp311-macosx_universal2",
+    "cp312-macosx_universal2",
+    "cp313-macosx_universal2",
+]
+build-verbosity = 1
+test-command = "python -m pytest --maxfail=1 --disable-warnings \"{project}/tests/smoke\""
+test-requires = ["pytest"]
+
+[tool.cibuildwheel.linux]
+archs = ["x86_64", "aarch64"]
+manylinux-x86_64-image = "manylinux_2_28"
+manylinux-aarch64-image = "manylinux_2_28"
+musllinux-x86_64-image = "musllinux_1_2"
+musllinux-aarch64-image = "musllinux_1_2"
+repair-wheel-command = "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"
+
+[tool.cibuildwheel.windows]
+archs = ["AMD64"]
+
+[tool.cibuildwheel.macos]
+archs = ["universal2"]
+repair-wheel-command = "delocate-listdeps {wheel} && delocate-wheel -w {dest_dir} {wheel}"
+
+[tool.mutmut]
+paths_to_mutate = [
+    "core/indicators",
+    "backtest/engine.py",
+    "execution/oms.py",
+    "execution/risk.py",
+]
+runner = "python -m pytest --maxfail=1 --disable-warnings"
+tests_dir = "tests"
+use_coverage = true
