--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 # SPDX-License-Identifier: MIT
 [pytest]
-addopts = -q -ra --maxfail=1 -W error::DeprecationWarning
+addopts =
+    -q -ra --maxfail=1 -W error::DeprecationWarning
+    --cov=core --cov=backtest --cov=execution
+    --cov-report=term-missing --cov-report=xml --cov-report=html:coverage_html
+    --cov-fail-under=90
 testpaths = tests
 python_files = test_*.py
 asyncio_default_fixture_loop_scope = function
