--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,8 @@ websockets>=15.0.1
 ccxt>=4.5.9
 tenacity>=9.1.2
 aiolimiter>=1.2.1
-pyarrow>=21.0.0
+
+# Optional feature store backends are available via `pip install tradepulse[feature_store]`
 
 # Templates & packaging helpers
 click>=8.1.7
