Add event replay debugging utilities and tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -8,5 +8,6 @@ markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     arm: cross-architecture and portability checks for indicators
     heavy_math: compute-intensive suites that gate pull requests
+    eventsdebug: replay regression tests validating event log determinism
 filterwarnings =
     ignore::UserWarning
